--- a/app/views/pages/availability.html.erb
+++ b/app/views/pages/availability.html.erb
@@ -1,10 +1,10 @@
-<%= stylesheet_link_tag "availability" %>
-<table width="800" cellspacing="0" cellpadding="0" border="1" align="center">
+<%= stylesheet_link_tag "application" %>
+<table id="availability" width="800" cellspacing="0" cellpadding="0" border="1" align="center">
     <thead>
         <tr>
-          <td class="table_middle" valign="top" height="30" align="left">
+          <td class="atable_middle" valign="top" height="30" align="left">
             <span class="table_middle">
-                <span class="heading">Senior High Availability</span>
+                <span class="heading">Availability</span>
             </span>
           </td>
           <% for i in 0..@matrices[:period_count] -1 do %>
@@ -17,15 +17,15 @@
 <% s_count = @matrices[:site_count].to_s.to_i %>
 <% for i in 0..s_count - 1 do %>
     <tr>
-      <td class="table_middle" width="160" height="30" align="left"><%= @matrices[:site_names][i] %></td>
+      <td class="table_middle availability " width="160" height="30" align="left"><%= @matrices[:site_names][i] %></td>
       <% count = @matrices[:period_count].to_s.to_i %>
       <% for j in 0..count - 1 do %>
           <% if @matrices[:session_id_matrix][i][j] > 0 %>
               <% if @matrices[:senior_high][i][j] %>
                   <% if @matrices[:avail_matrix][i][j] <= 0 %>
-                    <td class="paragraph_text" valign="middle" height="30" align="center" style="text-align: center">Full</td>
+                    <td class="availability paragraph_text" valign="middle" height="30" align="center" style="text-align: center">Full</td>
                   <% else %>
-                    <td class="paragraph_text" valign="middle" height="30" align="center" style="text-align: center"><%= @matrices[:avail_matrix][i][j].to_s %></td>
+                    <td class="availability paragraph_text" valign="middle" height="30" align="center" style="text-align: center"><%= @matrices[:avail_matrix][i][j].to_s %></td>
                   <% end %>
               <% else %>
                   <% if @matrices[:avail_matrix][i][j] <= 0 %>
