Final styling of availability view.

--- a/app/views/pages/availability.html.erb
+++ b/app/views/pages/availability.html.erb
@@ -32,7 +32,7 @@
                   <% end %>
                <% end %>
           <% else %>
-              <td class="graybackground paragraph_text" valign="middle" height="30" align="center" style="text-align: center">N/A</td>
+              <td class="graybackground paragraph_text" valign="middle" height="30" align="center" style="text-align: center"></td>
           <% end %>
       <% end %>
     </tr>
