Set time zone to PST.

--- a/app/views/registration/_availability_table.html.erb
+++ b/app/views/registration/_availability_table.html.erb
@@ -39,6 +39,7 @@
   <% end %>
   <tr>
   </tr>
+  <% Time.zone = 'America/Los_Angeles' %>
   <tr><td class="intext_emphasis" colspan="7" style="text-align: center" >This information is current as of <%= Time.now.strftime("%B %d at %-I:%M %p %Z") %></td></tr>
   </tbody>
 </table>
