Corrected error in invoice report.

--- a/app/views/scheduled_groups/invoice_report.html.erb
+++ b/app/views/scheduled_groups/invoice_report.html.erb
@@ -40,7 +40,7 @@
                     <td><%= number_to_currency g.final_pay_outstanding %></td>
                     <td><%= number_to_currency(g.adjustment_total) %></td>
                     <td><%= number_to_currency(g.total_due) %></td>
-                    <td><%= number_to_currency(g.amount_paid) %></td>
+                    <td><%= number_to_currency(g.fee_amount_paid) %></td>
                     <td><%= number_to_currency(g.current_balance) %></td>
                 </tr>
             <% end %>
