Corrected error in liaison version of scheduled groups report.

--- a/app/views/scheduled_groups/program_session.html.erb
+++ b/app/views/scheduled_groups/program_session.html.erb
@@ -45,7 +45,7 @@
                                             <td><%= r.current_total %></td>
                                             <% total_youth += r.current_youth %>
                                             <% total_counselors += r.current_counselors %>
-                                            <% grand_total += r.grand_total %>
+                                            <% grand_total += r.current_total %>
                                         </tr>
                             <% end %>
                          <% end %>
