--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -61,7 +61,8 @@
             </li>
             <li class="has_nested" ><a href='#'>SiteManager</a>
                <ul>
-                 <li><%= link_to "All Sites", ops_pages_show_path  %></li>
+                 <li><%= link_to "Current Sites", ops_pages_show_path  %></li>
+                 <li><%= link_to "2012 Sites", ops_pages_show_old_path  %></li>
                  <li><%= link_to "Vendors", vendors_path %></li>
                  <li><%= link_to "Items", items_path %></li>
                  <li><%= link_to "Purchases", admin_purchases_path %></li>
