Invoke asset pipeline on admin_layout_alt partial.

--- a/app/views/layouts/admin_layout_alt.html.erb
+++ b/app/views/layouts/admin_layout_alt.html.erb
@@ -4,7 +4,7 @@
     <title id="title"><%= title %></title>
     <%= favicon_link_tag %>
 
-    <%= render 'layouts/stylesheets' %>
+    <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag 'application' %>
     <script src = https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js></script>
 </head>
