Standalone cc payment screen and logic. Began work.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,6 +55,7 @@
                <ul>
                   <li><%= link_to "Churches", admin_churches_path %></li>
                   <li><%= link_to "Liaisons", admin_liaisons_path %></li>
+                  <li><%= link_to "CC Payments", standalone_cc_payment_path %></li>
                   <li><%= link_to "Purchases", admin_purchases_path %></li>
                   <li><%= link_to "Admin Center", admin_path %></li>
                </ul>
