--- a/app/views/liaisons/show.html.erb
+++ b/app/views/liaisons/show.html.erb
@@ -1,7 +1,7 @@
 <div id="active_admin_content"  class="with_sidebar">
   <div id="main_content_wrapper">
     <div id="main_content">
-    <p><%= link_to 'Register A Group', new_registration_path(:id => params[:id])%></p>
+    <p><%= link_to 'Register A Summer Group', new_registration_path(:id => params[:id])%>  <%= link_to 'Register A Weekend of Service Group', new_weekend_registration_path(:id => params[:id])%></p>
     <div class="panel">
    <%= form_for(@screen_info[:liaison]) do |r| %>
       <h3>Church Details</h3>
