Added email to fields for standalone cc payment.

--- a/app/views/payment/new_standalone_cc.html.erb
+++ b/app/views/payment/new_standalone_cc.html.erb
@@ -16,6 +16,10 @@
                            <td id="payer_name"><%= text_field_tag :payer_name %></td>
                         </tr>
                         <tr>
+                           <td><label>Payer's Email</label></td>
+                           <td id="payer_email"><%= text_field_tag :payer_email %></td>
+                        </tr>
+                        <tr>
                           <td><label>Program</label></td>
                           <td id="program"><%= text_field_tag :program %></td>
                         </tr>
