--- a/app/assets/stylesheets/active_admin.css
+++ b/app/assets/stylesheets/active_admin.css
@@ -2742,7 +2742,7 @@ table.dashboard .dashboard_section hr {
     border-bottom: 1px solid #E8E8E8; }
 
 .scopes {
-    float: left;
+    /*float: left;*/
     margin-bottom: 10px;
     font-size: 1.0em; }
 .scopes .scope {
