--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -416,3 +416,11 @@ h1.process_step {
 .eight-steps ol li {
     width: 10%;
 }
+
+.button_to {
+    display: inline;
+}
+
+.button_to div {
+    display: inline;
+}
