--- a/app/views/registration/show_schedule.html.erb
+++ b/app/views/registration/show_schedule.html.erb
@@ -1,17 +1,15 @@
      <div id="active_admin_content" class="without_sidebar">
         <div id="main_content_wrapper">
             <div id="main_content">
-            <div class="panel">
-                <div class="panel_contents">
-                  <span class="scopes">
-                    <span class = scope><%= link_to "Domestic Summer Scheduled",
-                              registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'summer_domestic') %>
-                    </span>
-                    <span class = "scope"><%= link_to "Domestic Summer Unscheduled",
+            <div class="scopes">
+                    <%= button_to "Domestic Summer Scheduled", registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'summer_domestic') %>
+                    <%= button_to "Domestic Summer Unscheduled",
                               registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'summer_domestic') %>
-                    </span>
-                   </span>
-                </div>
+                    <%= button_to "Other Scheduled",
+                              registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'other') %>
+                    <%= button_to "Other Unscheduled",
+                              registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'other') %>
+
             </div>
             <div class="panel">
               <div class = "panel contents">
