Created new other availability modal dialog and refactored some code in registration_controller.

--- a/app/views/registration/new_weekend.html.erb
+++ b/app/views/registration/new_weekend.html.erb
@@ -2,7 +2,7 @@
 <div id='active_admin_content'>
     <div id='register_header'>
         <h4><%= link_to "Help with scheduling a group", "http://www.sierraserviceproject.org/2013/MySSP Registration User Guide.pdf" %></h4>
-        <img id="available_link" class="reg_buttons available_button">
+        <img id="other_available_link" class="reg_buttons available_button">
         <div class="clear"></div>
         <div class="hidden" id="available_data"></div>
         <h3>This online system has been set up for your convenience. If you run into problems, refer to the user guide
