--- a/app/views/scheduled_groups/invoice_report.csv.erb
+++ b/app/views/scheduled_groups/invoice_report.csv.erb
@@ -1,12 +1,12 @@
-<% headers = ['Church Name', 'Group Name', 'Number Youth', 'Number Counselors', 'Total Number', 'Deposits Due',
+<% headers = ['Church Name', "Group Name", 'Number Youth', 'Number Counselors', 'Deposits Due',
         'Deposit $ Paid', 'Deposit $ Outstanding', 'Sec Payments Due', 'Sec Payment $ Paid', 'Sec Payment $ Outstanding',
-        'Final Payments Due', 'Final Payment $ Due', 'Final Payment $ Outstanding', 'Adjustment', 'Current Balance', 'Total Due' ] %>
+        'Final Payments Due', 'Final Paid', 'Final Outstanding', 'Adjustment', 'Total Paid to Date', 'Current Balance Due' ] %>
 <%= CSV.generate_line headers, :col_sep => ?\,, :row_sep => ?\t, :quote_char => ?\ %>
-<% @invoices.each do |i| %>
-    <% row = [ i[:church_name], i[:group_name], i[:youth], i[:counselors], (i[:youth] + i[:counselors]), i[:deposits_due],
-        i[:deposits_paid], i[:deposits_outstanding], i[:second_payments_due],i[:second_payments_paid],
-        i[:second_payments_outstanding], i[:final_payments_due], i[:final_payments_paid],
-        i[:final_payments_outstanding], i[:adjustments], i[:current_balance], i[:total_due] ] %>
+<% @groups.each do |i| %>
+    <% row = [ i.church.name, i[:name], i[:current_youth], i[:current_counselors], i.deposit_amount,
+        i.deposit_paid, i.deposit_outstanding, i.second_pay_amount, i.second_pay_paid,
+        i.second_pay_outstanding, i.final_pay_amount, i.final_pay_paid,
+        i.final_pay_outstanding, i.adjustment_total, i.total_due, i.fee_amount_paid, i.current_balance ] %>
     <%= CSV.generate_line row, :col_sep => ?\,, :row_sep => ?\t, :quote_char => ?\ %>
 <% end %>
                                                                                                                                    0
