--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,9 +12,9 @@
                   <li><%= link_to "Schedule a group", admin_registrations_path%></li>
                   <li><%= link_to "Invoice report", invoice_report_path%></li>
                   <li><%= link_to "Show the schedule - scheduled summer domestic",
-                          registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'summer_domestic')%></li>
+                          registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'Summer Domestic')%></li>
                   <li><%= link_to "Show the schedule - unscheduled summer domestic",
-                          registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'summer_domestic')%></li>
+                          registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'Summer Domestic')%></li>
                  <li><%= link_to "Show the schedule - scheduled other programs",
                           registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'other')%></li>
                   <li><%= link_to "Show the schedule - scheduled other programs",
