--- a/app/views/registration/show_schedule.html.erb
+++ b/app/views/registration/show_schedule.html.erb
@@ -2,13 +2,13 @@
         <div id="main_content_wrapper">
             <div id="main_content">
             <div class="scopes">
-                    <%= button_to "Domestic Summer Scheduled", registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'summer_domestic') %>
+                    <%= button_to "Domestic Summer Scheduled", registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'Summer Domestic') %>
                     <%= button_to "Domestic Summer Unscheduled",
-                              registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'summer_domestic') %>
-                    <%= button_to "Other Scheduled",
-                              registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'other') %>
-                    <%= button_to "Other Unscheduled",
-                              registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'other') %>
+                              registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'Summer Domestic') %>
+                    <%= button_to "WoS Scheduled",
+                              registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'Weekend of Service') %>
+                    <%= button_to "WoS Unscheduled",
+                              registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'Weekend of Service') %>
 
             </div>
             <div class="panel">
