Added prior year option for enrollment report.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,8 @@
                   <li><%= link_to "Roster Summary: CSV", rosters_csv_path(:format => :csv)%></li>
                   <li><%= link_to "Purchases with Unaccounted $", unaccounted_report_path%></li>
                   <li><%= link_to "Spending Report", spending_by_site_report_path%></li>
-                  <li><%= link_to "Participant Summary: CSV", part_sum_csv_path(:format => :csv)%></li>
+                  <li><%= link_to "Participant Summary - Current year: CSV", part_sum_csv_path(:format => :csv)%></li>
+                  <li><%= link_to "Participant Summary - 2012: CSV", part_sum_csv_path(:format => :csv, :year => '2012')%></li>
                   <li><%= link_to "Year-to-Year: CSV", missing_churches_csv_path(:format => :csv)%></li>
                   <li><%= link_to "New Churches: CSV", new_churches_csv_path(:format => :csv)%></li>
                 </ul>
