Integration of "other" programs with summer domestic. Waitlist and due_at_start flags added to db.

--- a/app/views/layouts/_scheduled_group_table.html.erb
+++ b/app/views/layouts/_scheduled_group_table.html.erb
@@ -38,6 +38,6 @@
     </tr>
     <tr>
       <th>End Date</th>
-      <td><%= @scheduled_group.session.period_end_date.strftime("%A, %B %d, %Y at %l:%M %p") %></td>
+      <td><%= @scheduled_group.session.period.end_date.strftime("%A, %B %d, %Y at %l:%M %p") %></td>
     </tr>
 </table>
