--- a/app/views/registration/show_schedule.html.erb
+++ b/app/views/registration/show_schedule.html.erb
@@ -5,10 +5,10 @@
                     <%= button_to "Domestic Summer Scheduled", registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'Summer Domestic') %>
                     <%= button_to "Domestic Summer Unscheduled",
                               registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'Summer Domestic') %>
-                    <%= button_to "WoS Scheduled",
-                              registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'Weekend of Service') %>
-                    <%= button_to "WoS Unscheduled",
-                              registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'Weekend of Service') %>
+                    <%= button_to "Other Scheduled",
+                              registration_show_schedule_path(:reg_or_sched => 'scheduled', :type => 'Other') %>
+                    <%= button_to "Other Unscheduled",
+                              registration_show_schedule_path(:reg_or_sched => 'registered', :type => 'Other') %>
 
             </div>
             <div class="panel">
