--- a/app/views/registration/_save_registration_data.html.erb
+++ b/app/views/registration/_save_registration_data.html.erb
@@ -3,4 +3,5 @@
 <input type ="hidden" name="deposit_amount" id="deposit_amount" value="<%= @deposit_amount %>" />
 <input type ="hidden" name="processing_charge" id="processing_charge" value="<%= @processing_charge %>" />
 <input type ="hidden" name="to_be_charged" id="to_be_charged" value="<%= @to_be_charged %>" />
+<input type ="hidden" name="group_type" id="group_type" value="<%= @group_type %>" />
 <div id="save_message"><%= @message %></div>
